k8s/backend.yaml
# Quarkus Application Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/2324-4bhif-syp/2324-4bhif-syp-project-leovote/backend:latest
          # remove this when stable. Currently, we do not take care of version numbers
          imagePullPolicy: Always
          # command: ["tail","-f","/dev/null"]
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
