k8s/frontend.yaml
# Quarkus Application Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/2324-4bhif-syp/frontend:latest
          # remove this when stable. Currently, we do not take care of version numbers
          imagePullPolicy: Always
          # command: ["tail","-f","/dev/null"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: frontend
