k8s/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/rewrite-target: /tracing/$2
  name: jaeger
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /tracing(/|$)(.*)  #must match Jager spec.query.options.base-path
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingress-with-tls-query
                port:
                  number: 16686
